--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,8 @@
                     android:gravity="end|bottom"
                     android:layout_margin="15dp"
                     android:padding="5dp"
-                    android:layout_height="330dp">
+                    android:background="@drawable/main_lay_background"
+                    android:layout_height="wrap_content">
 
                     <VideoView
                         android:id="@+id/vv1"
@@ -55,6 +56,7 @@
                     android:gravity="start|bottom"
                     android:layout_margin="15dp"
                     android:padding="5dp"
+                    android:background="@drawable/main_lay_background"
                     android:layout_height="330dp">
 
                     <VideoView
@@ -80,6 +82,7 @@
                     android:layout_marginTop="1dp"
                     android:layout_marginBottom="20dp"
                     android:padding="5dp"
+                    android:background="@drawable/main_lay_background"
                     android:layout_height="330dp">
 
                     <VideoView
@@ -97,6 +100,7 @@
                     android:layout_marginTop="1dp"
                     android:layout_marginBottom="20dp"
                     android:padding="5dp"
+                    android:background="@drawable/main_lay_background"
                     android:layout_height="330dp">
 
                     <VideoView
