--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="shadow_color">#FF000000</color>
     <color name="line_button">#565758</color>
     <color name="black_translucent">#50000000</color>
+    <color name="blue_box_color">#0DC19D</color>
 </resources>
