--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
                     android:layout_margin="15dp"
                     android:padding="5dp"
                     android:background="@drawable/main_lay_background"
-                    android:layout_height="wrap_content">
+                    android:layout_height="330dp">
 
                     <VideoView
                         android:id="@+id/vv1"
