final changes of the day

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,26 +49,39 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                    <VideoView
+
+                       <VideoView
                         android:id="@+id/vv1"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent" />
                         <Button
                             android:id="@+id/iv_mute_button_1"
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="bottom"
                             android:layout_margin="8dp"
                             android:visibility="gone"
                             android:background="@drawable/ic_volume_up_black_24dp"/>
                         <Button
                             android:id="@+id/iv_un_mute_button_1"
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="bottom"
                             android:layout_margin="8dp"
                             android:visibility="gone"
                             android:background="@drawable/ic_volume_off_black_24dp"/>
+                        <com.mikhaellopez.circularprogressbar.CircularProgressBar
+                            android:id="@+id/circularProgressBar"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            app:cpb_background_progressbar_color="#b6bbd8"
+                            app:cpb_background_progressbar_width="5dp"
+                            app:cpb_progress_direction="to_right"
+                            app:cpb_progressbar_color="@color/background_progress_color"
+                            app:cpb_progressbar_width="6dp"
+                            android:layout_gravity="center"
+                            android:visibility="gone"
+                            app:cpb_round_border="false" />
                     </FrameLayout>
                 </LinearLayout>
                 <LinearLayout
@@ -89,16 +102,16 @@
                         android:layout_height="match_parent" />
                         <Button
                             android:id="@+id/iv_mute_button_2"
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="bottom"
                             android:layout_margin="8dp"
                             android:visibility="gone"
                             android:background="@drawable/ic_volume_up_black_24dp"/>
                         <Button
                             android:id="@+id/iv_un_mute_button_2"
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="bottom"
                             android:layout_margin="8dp"
                             android:visibility="gone"
@@ -134,16 +147,16 @@
                         android:layout_height="match_parent" />
                         <Button
                             android:id="@+id/iv_mute_button_3"
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="bottom"
                             android:layout_margin="8dp"
                             android:visibility="gone"
                             android:background="@drawable/ic_volume_up_black_24dp"/>
                         <Button
                             android:id="@+id/iv_un_mute_button_3"
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="bottom"
                             android:layout_margin="8dp"
                             android:visibility="gone"
@@ -171,16 +184,16 @@
                         android:layout_height="match_parent" />
                         <Button
                             android:id="@+id/iv_mute_button_4"
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="bottom"
                             android:layout_margin="8dp"
                             android:visibility="gone"
                             android:background="@drawable/ic_volume_up_black_24dp"/>
                         <Button
                             android:id="@+id/iv_un_mute_button_4"
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:layout_gravity="bottom"
                             android:layout_margin="8dp"
                             android:visibility="gone"
